[gd_scene load_steps=2 format=3 uid="uid://crkesognymeql"]

[ext_resource type="Script" path="res://main.gd" id="1_en88n"]

[node name="Main" type="Node2D"]
position = Vector2(60, 77)
script = ExtResource("1_en88n")

[node name="InstructionLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 117.0
offset_bottom = 73.0
metadata/_edit_use_anchors_ = true

[node name="GuessInput" type="LineEdit" parent="."]
offset_left = 50.0
offset_top = 100.0
offset_right = 117.062
offset_bottom = 131.0
metadata/_edit_use_anchors_ = true

[node name="SubmitButton" type="Button" parent="."]
offset_left = 50.0
offset_top = 150.0
offset_right = 117.0
offset_bottom = 170.0
metadata/_edit_use_anchors_ = true

[node name="ResultLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 200.0
offset_right = 117.0
offset_bottom = 223.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
